Fix desktop nav z-index - must be above header

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -178,7 +178,7 @@ p { text-wrap: pretty; }
   height: var(--header-height);
   display: flex;
   align-items: center;
-  z-index: 9999;
+  z-index: 10001;
   padding-right: 1.5rem;
 }
 
